Cleanup in indexer, spotlessApply